hphp/hack/test/typecheck/const_attribute/usage/subclass_prop_not_const.php.exp
File "subclass_prop_not_const.php", line 5, characters 14-15:
This property is __Const (Typing[4204])
File "subclass_prop_not_const.php", line 9, characters 14-15:
This property is not __Const
